--- a/index.html
+++ b/index.html
@@ -20,31 +20,48 @@
         <nav id="nav">
             <ul>
                 <li>
-                    <a href="Pages/Baker.html">About the Baker</a>
+                    <a class="sidebar-button" href="Pages/Baker.html">About the Baker</a>
                 </li>
                 <li>
-                    <a href="Pages/More.html">Picture Gallery</a>
+                    <a class="sidebar-button" href="Pages/More.html">Picture Gallery</a>
                 </li>
                 <li>
-                    <a href="Pages/Contact.html">Contact Us</a>
+                    <a class="sidebar-button" href="Pages/Contact.html">Contact Us</a>
                 </li>
             </ul>
         </nav>
     </div>
 
     <div id="blurb-section">
-        <p id="blurb">The quick brown fox jumps over the lazy dog</p>
+        <p class="fade-in-text" id="blurb">The quick brown fox jumps over the lazy dog</p>
     </div>
 
     <div id="pictures-section">
-        <img class="picture" src="Assets/IMG_0003.PNG">
-        <img class="picture" src="Assets/IMG_1155.png">
-        <img class="picture" src="Assets/Subject.PNG">
+        <div class="picture-container">
+            <img class="picture" src="Assets/IMG_0003.PNG">
+            <span class="caption">
+                insert caption here
+            </span>
+        </div>
+
+        <div class="picture-container">
+            <img class="picture" src="Assets/IMG_1155.png">
+            <span class="caption">
+                insert caption here
+            </span>
+        </div>
+
+        <div class="picture-container">
+            <img class="picture" src="Assets/Subject.PNG">
+            <span class="caption">
+                A Happy Birthday Cake For David Ta's Third Birthday
+            </span>
+        </div>
     </div>
 
-    <div id="rights">
+    <!-- <div id="rights">
         <span>Created by Anthony Lau @ 2023</span>
-    </div>
+    </div> -->
 
     <script href="index.js"></script>
 </body>
