--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -15,10 +15,16 @@
         </a>
     </div>
 
-    <h1 class="english-text" id="contact-heading-en">Contact us on WeChat!</h1>
-    <h1 class="chinese-text" id="contact-heading-zh">微信联系我们！</h1>
+    <strong class="english-text" id="contact-heading-en">You can place an order to us by coming into our location, calling our phone number, or contacting us on WeChat!</strong>
+    <strong class="chinese-text" id="contact-heading-zh">您可以亲临我们的营业地点，拨打您的电话号码，微信联系我们，向我们下订单！</strong>
+    <!-- 微信联系我们！ -->
+    <br>
     <p class="english-text" id="instructions-p-en">Tell us how you want the cake and the diameter and we will make it for you.</p>
     <p class="chinese-text" id="instructions-p-zh">告诉我们您想要的蛋糕和直径，我们将为您制作。</p>
+    <br>
+
+    <p>Tel: (718) 438-4920</p>
+    <br>
 
     <img id="QRCode" src="../Assets/QRCode.JPEG">
 </body>
