--- a/Pages/Baker.html
+++ b/Pages/Baker.html
@@ -20,6 +20,8 @@
         With experience for over 25 years in the baking industry, Kam Tim Lau is an extremely experienced and capable baker 
         who is willing to design a cake up to your specifications. You can see examples of the cakes he has designed and created in our <a href="More.html">picture gallery</a>!
     </p>
+
+    <img href=#>
 </body>
 
 </html>
