Added framework for pictures in gallery

--- a/Pages/More.html
+++ b/Pages/More.html
@@ -14,6 +14,13 @@
             <img id="logo-pic" src="../Assets/TempLogo.png">
         </a>
     </div>
+
+    <h1>More of the cakes we've made</h1>
+    <div id="pic-gallery-container">
+        <img class="picture" src="../Assets/IMG_0003.PNG">
+        <img class="picture" src="../Assets/IMG_1155.png">
+        <img class="picture" src="../Assets/Subject.PNG">
+    </div>
 </body>
 
 </html>
